--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -77,6 +77,12 @@
                         div label {
                             width: auto;
                         }
+                        .wpsl-input {
+                            margin: 0;
+                        }
+                        .wpsl-dropdown {
+                            width: auto;
+                        }
                         .wpsl-select-wrap {
                             margin: 0;
                         }
