--- a/style.css
+++ b/style.css
@@ -12673,25 +12673,29 @@ body.sticky--header #masthead {
   @media (min-width: 1800px) {
     .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search {
       max-width: 1720px; } }
-  .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap; }
-    .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form > div {
-      float: none;
+  .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap {
+    margin-bottom: 30px; }
+    .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form {
       display: flex;
-      align-items: center; }
-    .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form div label {
-      width: auto; }
-    .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-select-wrap {
-      margin: 0; }
-    .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form #wpsl-search-btn {
-      background-color: var(--wp--preset--color--maroon) !important;
-      background-image: none;
-      border-radius: 0;
-      border: none;
-      color: #fff;
-      padding: 10px 20px; }
+      align-items: center;
+      flex-wrap: wrap; }
+      .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form > div {
+        float: none;
+        display: flex;
+        align-items: center; }
+      .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form div label {
+        width: auto; }
+      .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-dropdown {
+        width: auto; }
+      .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-select-wrap {
+        margin: 0; }
+      .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form #wpsl-search-btn {
+        background-color: var(--wp--preset--color--maroon) !important;
+        background-image: none;
+        border-radius: 0;
+        border: none;
+        color: #fff;
+        padding: 10px 20px; }
 .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list {
   background-color: var(--wp--preset--color--lightgray-2);
   margin: 0;
