--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -42,6 +42,7 @@
             background-color: transparent;
         }
         #wpsl-wrap {
+            margin: 0;
             .wpsl-search {
                 padding-left: 12px;
                 padding-right: 12px;
