--- a/style.css
+++ b/style.css
@@ -12726,20 +12726,20 @@ body.sticky--header #masthead {
   .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-gmap {
     width: 60%; }
 
-.listing--buttons {
+.listing--buttons.listing--buttons.listing--buttons {
   display: flex;
   align-items: center;
   gap: 10px;
   flex-wrap: wrap; }
-  .listing--buttons .btn {
+  .listing--buttons.listing--buttons.listing--buttons .btn {
     padding: 0;
     border: none; }
-    .listing--buttons .btn a {
+    .listing--buttons.listing--buttons.listing--buttons .btn a {
       padding: 18px 25px;
       font-size: 15px;
       border: 1px solid;
       display: block; }
-    .listing--buttons .btn.btn-appointment a {
+    .listing--buttons.listing--buttons.listing--buttons .btn.btn-appointment a {
       background-color: var(--wp--preset--color--maroon);
       border-color: var(--wp--preset--color--maroon);
       color: #fff; }
