--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -125,6 +125,14 @@
                     overflow: auto;
                     max-width: 660px;
                     margin-left: auto;
+                    ul {
+                        li {
+                            padding: 0;
+                            border-bottom: 1px solid #000;
+                            padding-bottom: 40px;
+                            margin-bottom: 40px;
+                        }
+                    }
                 }
             }
             #wpsl-gmap {
