--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -131,6 +131,11 @@
                             border-bottom: 1px solid #000;
                             padding-bottom: 40px;
                             margin-bottom: 40px;
+                            h4 {
+                                font-size: 18px;
+                                font-weight: 400;
+                                margin-bottom: 20px;
+                            }
                         }
                     }
                 }
