--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -136,6 +136,9 @@
                                 font-weight: 400;
                                 margin-bottom: 20px;
                             }
+                            .distance {
+                                
+                            }
                         }
                     }
                 }
@@ -148,6 +151,7 @@
 }
 
 .listing--buttons.listing--buttons.listing--buttons {
+    margin-top: 30px;
     display: flex;
     align-items: center;
     gap: 10px;
