--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -137,7 +137,15 @@
                                 margin-bottom: 20px;
                             }
                             .distance {
-                                
+                                display: flex;
+                                align-items: center;
+                                gap: 10px;
+                                margin-top: 30px;
+
+                                svg {
+                                    width: 14px;
+                                    height: auto;
+                                }
                             }
                         }
                     }
