--- a/style.css
+++ b/style.css
@@ -12735,7 +12735,8 @@ body.sticky--header #masthead {
         .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list #wpsl-stores ul li .distance {
           display: flex;
           align-items: center;
-          gap: 10px; }
+          gap: 10px;
+          margin-top: 30px; }
           .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list #wpsl-stores ul li .distance svg {
             width: 14px;
             height: auto; }
