--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -147,6 +147,10 @@
                                     height: auto;
                                 }
                             }
+                            .wpsl-contact-details {
+                                margin-top: 30px;
+                                    font-weight: 500;
+                            }
                         }
                     }
                 }
