--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -201,3 +201,9 @@
         }
     }
 }
+
+.request--appointment--dealer {
+    .form-control {
+        background-color: var(--wp--preset--color--lightgray-2)red;
+    }
+}
