--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -204,6 +204,6 @@
 
 .request--appointment--dealer {
     .form-control {
-        background-color: var(--wp--preset--color--lightgray-2)red;
+        background-color: var(--wp--preset--color--lightgray-2);
     }
 }
