--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -149,7 +149,7 @@
                             }
                             .wpsl-contact-details {
                                 margin-top: 30px;
-                                    font-weight: 500;
+                                font-weight: 500;
                             }
                         }
                     }
@@ -209,5 +209,5 @@
 }
 
 .offcanvas-end---modal {
-    
+    overflow: auto;
 }
