--- a/style.css
+++ b/style.css
@@ -12773,7 +12773,7 @@ body.sticky--header #masthead {
 .request--appointment--dealer .form-control {
   background-color: var(--wp--preset--color--lightgray-2); }
 
-.offcanvas-end---modal {
+.offcanvas-end---modal .offcanvas-body--inner {
   overflow: auto; }
 
 .swiper-slider-holder .swiper-pagination-holder {
