--- a/style.css
+++ b/style.css
@@ -12571,6 +12571,7 @@ h5, .h5 {
     margin-top: 0; }
 
 body.sticky--header #main-header {
+  transition: 500ms;
   padding-top: 10px !important;
   padding-bottom: 10px !important; }
 body.sticky--header #masthead {
