--- a/style.css
+++ b/style.css
@@ -11276,6 +11276,9 @@ img {
   border-color: var(--dark);
   line-height: 1; }
 
+.nav-link a {
+  text-decoration: none; }
+
 .nav-tabs {
   --bs-nav-link-font-size: inherit;
   --bs-nav-link-color: var(--bs-black);
