--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -1,7 +1,6 @@
 body {
     --admin-bar-height: 0px;
     --header-height-default: 104.453px;
-   
 }
 
 img {
@@ -18,6 +17,19 @@ img {
 .nav-link {
     a {
         text-decoration: none;
+    }
+}
+.nav-item {
+    &.no--submenu {
+        a {
+            position: absolute;
+            content: "";
+            z-index: 1;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+        }
     }
 }
 .nav-tabs {
