--- a/style.css
+++ b/style.css
@@ -11279,6 +11279,15 @@ img {
 .nav-link a {
   text-decoration: none; }
 
+.nav-item.no--submenu a {
+  position: absolute;
+  content: "";
+  z-index: 1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
 .nav-tabs {
   --bs-nav-link-font-size: inherit;
   --bs-nav-link-color: var(--bs-black);
