--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -70,9 +70,17 @@ body {
 }
 
 #offCanvasMenu {
+    .listings-taxonomy-wrapper {
+        --bs-gutter-x: 3rem;
+            --bs-gutter-y: 3rem;
+}
+    }
     .listings--inner {
         padding: 0 !important;
         .logo-box {
+            position: absolute;
+            top: 0;
+            left: 0;
             img {
                 height: 18px;
                 width: auto;
