--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -13,7 +13,15 @@ img {
     border-color: var(--dark);
     line-height: 1;
 }
-
+.btn--bordered {
+    a {
+        @include on-event {
+            border-color: var(--wp--preset--color--text) !important;
+            background-color: var(--wp--preset--color--text) !important;
+            color: var(--bs-white) !important;
+        }
+    }
+}
 .nav-link {
     a {
         text-decoration: none;
