--- a/assets/stylesheets/base/_helpers.scss
+++ b/assets/stylesheets/base/_helpers.scss
@@ -456,3 +456,9 @@
         object-fit: cover;
     }
 }
+.image--4-2 {
+    img {
+        aspect-ratio: 4/2;
+        object-fit: cover;
+    }
+}
