--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -634,3 +634,9 @@ img {
         height: 52px;
     }
 }
+
+.swiper-logo-slider {
+    .swiper-wrapper {
+        transition-timing-function: linear !important;
+    }
+}
