--- a/style.css
+++ b/style.css
@@ -11791,6 +11791,9 @@ img {
   width: auto;
   height: 52px; }
 
+.swiper-logo-slider .swiper-wrapper {
+  transition-timing-function: linear !important; }
+
 @media (min-width: 1500px) {
   .container {
     max-width: 1420px; } }
